# Collaboration

./: CMakeLists.txt  Makefile  README.md  collaboration  main.c  main.cpp
Docs/: description.txt
include/: main_entry.h  start_point.hpp
include/animation_engine/: animation_engine.h
include/collision_detection/: collision_detection_main.hpp
include/physics_engine/: physics_engine.h  physics_engine_main.hpp
include/physics_engine/collision_detection/: collision_detection.h
include/render_engine/: camera.h  render_engine.h  render_engine_main.hpp  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loaders.h  vk_pipelines.h  vk_types.h
include/render_engine/matrices/: matrix_transformations.hpp
include/scripting/: scripting.h  scripting_main.hpp
include/sound_engine/: sound_engine.h  sound_engine_main.hpp
include/sound_engine/modules/: loader.h
src/: main.cpp  main_entry.cpp  start_point.cpp
src/animation_engine/: animation_engine.cpp
src/collision_detection/: collision_detection_main.cpp
src/physics_engine/: physics_engine.cpp  physics_engine_main.cpp
src/physics_engine/collision_detection/: collision_detection.cpp
src/render_engine/: camera.cpp  meshes.cpp  render_engine.cpp  render_engine_main.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
src/render_engine/shaders/: colored_triangle.vert  colored_triangle.vert.spv  (+7 more)
src/scripting/: scripting.cpp  scripting_main.cpp
src/scripting_engine/: scripting.cpp
src/sound_engine/: sound_engine.cpp  sound_engine_main.cpp
(+1 files in other folders)
